--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
           <div class="collapse navbar-collapse" id="navbarsExample01">
             <ul class="navbar-nav me-auto mb-2">
               <li class="nav-item">
-                <a class="nav-link" href="#">LinkedIn</a>
+                <a class="nav-link" href="https://www.linkedin.com/in/johnsonchau7/" target="_blank">LinkedIn</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Github</a>
+                <a class="nav-link" href="https://github.com/johnsonchau7" target="_blank">Github</a>
               </li>
             </ul>
           </div>
@@ -42,8 +42,8 @@
             <h1 class="fw-light">Johnson Chau</h1>
             <p class="lead text-muted">Software Engineer</p>
             <p>
-              <a href="#" class="btn btn-primary my-2">Main call to action</a>
-              <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+              <!-- <a href="#" class="btn btn-primary my-2">Main call to action</a>
+              <a href="#" class="btn btn-secondary my-2">Secondary action</a> -->
             </p>
           </div>
         </div>
@@ -53,29 +53,34 @@
         <div class="container">
 
           <div class="row">
-            <div class="col">
-              <div class="card shadow-sm">
-                <img class="card-img-top img-fluid" src="resources/Bulb_finance.png" alt="Card image cap">
+            <div class="col-sm">
+              <div class="card shadow-sm h-100">
+                <img class="card-img-top" src="resources/Bulb_finance.png" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">Bulb Finance</p>
+                  <h5 class="card-title">Bulb Finance</h5>
+                  <p class="card-text">Sentiment app for stocks</p>
                   <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <div class="btn-group h-100">
+                      <a href="https://apps.apple.com/gb/app/bulb-finance/id1560792198?ign-mpt=uo%3D2" target="_blank">
+                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                      </a>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="card shadow-sm">
-                <img class="card-img-top img-fluid" src="resources/Stock_portfolio_tracker.png" alt="Card image cap">
+            <div class="col-sm">
+              <div class="card shadow-sm h-100">
+                <img class="card-img-top" src="resources/Stock_portfolio_tracker.png" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">Bulb Finance</p>
+                  <h5 class="card-title">Portfolio.io</h5>
+                  <p class="card-text">Stock portfolio tracker as a web application</p>
                   <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <div class="btn-group h-100">
+                      <a href="https://stock-portfolio-tracker-io.herokuapp.com/" target="_blank">
+                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                      </a>
                     </div>
-                    <small class="text-muted">9 mins</small>
                   </div>
                 </div>
               </div>
