--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-
     <title>Johnson Chau</title>
   </head>
   <body>
     <header>
       <nav class="navbar navbar-dark bg-dark" aria-label="First navbar example">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Johnson Chau</a>
+
+          <a class="navbar-brand" href="#">
+            Johnson Chau
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -49,38 +51,34 @@
         </div>
       </section>
 
-      <div class="album py-5 bg-light">
+      <div class="py-5 bg-light">
         <div class="container">
 
           <div class="row">
             <div class="col-sm">
-              <div class="card shadow-sm h-100">
+              <div class="card shadow h-100">
                 <img class="card-img-top" src="resources/Bulb_finance.png" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Bulb Finance</h5>
+                  <h3 class="card-title">Bulb Finance</h5>
                   <p class="card-text">Sentiment app for stocks</p>
                   <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group h-100">
-                      <a href="https://apps.apple.com/gb/app/bulb-finance/id1560792198?ign-mpt=uo%3D2" target="_blank">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      </a>
-                    </div>
+                    <a class="btn btn-sm btn-outline-secondary stretched-link" href="https://apps.apple.com/gb/app/bulb-finance/id1560792198?ign-mpt=uo%3D2" target="_blank">
+                      View
+                    </a>
                   </div>
                 </div>
               </div>
             </div>
             <div class="col-sm">
-              <div class="card shadow-sm h-100">
+              <div class="card shadow h-100">
                 <img class="card-img-top" src="resources/Stock_portfolio_tracker.png" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Portfolio.io</h5>
+                  <h3 class="card-title">Portfolio.io</h5>
                   <p class="card-text">Stock portfolio tracker as a web application</p>
                   <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group h-100">
-                      <a href="https://stock-portfolio-tracker-io.herokuapp.com/" target="_blank">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      </a>
-                    </div>
+                    <a class="btn btn-sm btn-outline-secondary stretched-link" href="https://stock-portfolio-tracker-io.herokuapp.com/" target="_blank">
+                      View
+                    </a>
                   </div>
                 </div>
               </div>
